# ad-load-performance-testing

./: .gitignore  README.md  batch.sh  hello.js  main.py  performance_metrics.js  performance_metrics.json  prebid_summaries.json  pyproject.toml  wrapwrap.py
archived_scripts/: disqus_extraction_runner.py  disqus_only_runner.py  known_working_main.py  mainclaude.py  mainold.py  old_tab_wrapper.py
data/: performance_metrics.json  prebid_summaries.json
injected_scripts/: disqus_polling.js  dsq_wrapper.js  extract_disqus_config.js  google_ads.js  make_red.js  only_disqus.js  performance_metrics.js  prebid_tracking.js
loaders/: template_loader.py
modes/: disqus_only.py  full_page.py
pydoll_extensions/: __init__.py  tab_wrapper.py
src/ad_load/: cli.py  main.py
src/ad_load/loaders/: __init__.py  script_loader.py  site_loader.py  sites.yaml  template_loader.py
src/ad_load/modes/: __init__.py  disqus_only.py  full_page.py
src/ad_load/pydoll_extensions/: tab_wrapper.py
src/ad_load/utils/: __init__.py  cdp_injector.py  disqus_extractor.py  export_prebid.py  make_chrome_options.py
templates/: disqus_page.html
tests/: test.py  test_script_loader.py  test_sites.yaml
utils/: __init__.py  disqus_extractor.py  injector.py  make_chrome_options.py  script_loader.py  site_loader.py
